# site_ae

./: .gitignore  .readthedoc.yml  db.sqlite3  features.md  manage.py  pyproject.toml  utils.py
eboutique/: admin.py  apps.py  encoders.py  exceptions.py  models.py  urls.py  views.py
eboutique/api/: basket.py
eboutique/migrations/: 0001_initial.py
eboutique/static/eboutique/css/: eboutique.css
eboutique/static/eboutique/js/: eboutique.js
eboutique/templates/eboutique/: index.html  index_js_data.html
eboutique/templatetags/: eboutique_tags.py
moderation/: models.py
pedagogy/: admin.py  api.py  apps.py  forms.py  models.py  urls.py  validators.py  views.py
pedagogy/static/pedagogy/css/: grade_stars.css  search_form_style.css  uv_style.css
pedagogy/static/pedagogy/js/: uv_detail.js  uv_search.js
pedagogy/templates/pedagogy/: annale_add_form.html  uv_detail.html  uvs.html
pedagogy/templates/pedagogy/uv_detail/: annales_panel.html  global_grades_panel.html  grade_stars.html  infos-panel.html  post_review_form.html  review_item.html  uv_detail.html
site_ae/: asgi.py  settings.py  settings_custom.py  urls.py  wsgi.py
static/css/: main_style.css
student_life/: admin.py  api.py  apps.py  encoders.py  models.py  urls.py  views.py
student_life/migrations/: 0001_initial.py
student_life/static/student_life/css/: club_style.css
student_life/static/student_life/js/: club_detail.js  club_search.js
student_life/templates/student_life/: view_all.html  view_detail.html
templates/: base.html  http_404.html
users/: admin.py  models.py  urls.py
