[tool.poetry]
name = "site_ae"
version = "0.1.0"
description = ""
authors = ["Thomas Girod <thgirod@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
