[tool.poetry]
name = "site_ae"
version = "0.1.0"
description = ""
authors = ["Thomas Girod <thgirod@hotmail.com>"]
repository = "https://github.com/imperosol/site_ae"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
pillow = "^9.2.0"
django-markdownify = "^0.9.2"

[tool.poetry.dev-dependencies]
Sphinx = "^5.1.1"
sphinx_rtd_theme = { version = "^0.4.3", optional = true  }


[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
